feat: Add Cloud Sync, Docker config update, and GitHub Actions workflow

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -54,6 +54,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY main.py .
+COPY cloud_sync.py .
 COPY docker/manage.py .
 
 # 复制 entrypoint.sh 并强制转换为 LF 格式
