fix: Enable workflow on push

--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -1,6 +1,8 @@
 name: TrendRadar Daily Crawler
 
 on:
+  push:
+    branches: [ "master", "main" ]  # 新增：每次推送到 master 或 main 分支时自动触发
   schedule:
     # 每天北京时间 8:00, 12:00, 18:00 运行 (UTC 0:00, 4:00, 10:00)
     # 你可以根据需要修改这里的 cron 表达式
